--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: php
 php:
   - 5.6
   - 7.0
-script: phpunit tests --whitelist src --coverage-text
+script:
+  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
