--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -4,6 +4,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:noNamespaceSchemaLocation="./vendor/squizlabs/php_codesniffer/phpcs.xsd">
 
+    <arg
+        name="extensions"
+        value="php/PHP"/>
+
     <file>./src/</file>
     <file>./tests/src/</file>
 
