--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,34 +1,33 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <phpunit
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:noNamespaceSchemaLocation="./vendor/phpunit/phpunit/phpunit.xsd"
-    bootstrap="vendor/autoload.php"
-    cacheResultFile=".cache/phpunit/results.json"
-    executionOrder="depends,defects"
-    forceCoversAnnotation="true"
-    beStrictAboutOutputDuringTests="true"
-    defaultTestSuite="Unit"
-    verbose="true"
+    xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+    cacheDirectory="./.cache/phpunit/"
     colors="true">
+
+    <source>
+        <include>
+            <directory>./src/</directory>
+        </include>
+    </source>
 
     <testsuites>
         <testsuite name="Unit">
-            <directory>tests/src/Unit/</directory>
+            <directory>./tests/src/Unit/</directory>
         </testsuite>
     </testsuites>
 
-    <filter>
-        <whitelist>
-            <directory>./src/</directory>
-        </whitelist>
-    </filter>
+    <coverage>
+        <report>
+            <html outputDirectory="./reports/human/coverage/html/" />
+
+            <!--<xml outputDirectory="./reports/machine/coverage/xml" />-->
+            <!--<php outputFile="./reports/machine/coverage.php" />-->
+            <clover outputFile="./reports/machine/coverage.clover.xml" />
+        </report>
+    </coverage>
 
     <logging>
-        <log type="coverage-text"   target="php://stdout"/>
-        <log type="coverage-html"   target="reports/human/html/"/>
-        <log type="testdox-html"    target="reports/human/result.html"/>
-        <log type="coverage-clover" target="reports/machine/coverage.clover.xml"/>
-        <log type="coverage-php"    target="reports/machine/coverage.php"/>
-        <log type="junit"           target="reports/machine/result.junit.xml"/>
+        <junit outputFile="./reports/machine/result.junit.xml" />
+        <testdoxHtml outputFile="./reports/human/result.html" />
     </logging>
 </phpunit>
