--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[{.phpstan/,phpstan}*.neon]
+indent_style = tab
+
 [tests/fixtures/**]
 indent_style = unset
 indent_size = unset
