--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,19 @@
         }
     ],
     "config": {
-        "platform": {
-            "php": "7.2"
-        },
         "optimize-autoloader": true,
         "sort-packages": true
     },
     "require": {
-        "php": ">=7.2",
+        "php": ">=8.2",
         "ext-ctype": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
-        "squizlabs/php_codesniffer": "^3.9"
+        "jetbrains/phpstorm-attributes": "^1.0",
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^11.0",
+        "squizlabs/php_codesniffer": "^3.9",
+        "symfony/filesystem": "^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -37,10 +37,12 @@
     "scripts": {
         "lint": [
             "@lint:composer-validate",
-            "@lint:phpcs"
+            "@lint:phpcs",
+            "@lint:phpstan"
         ],
         "lint:composer-validate": "\"${COMPOSER_BINARY}\" validate",
         "lint:phpcs": "phpcs",
+        "lint:phpstan": "phpstan analyze",
         "test": [
             "mkdir -p '.cache' 'reports/human' 'reports/machine'",
             "@test:phpunit"
