Issue #4 - Drop support for PHP<7.2 and Add support for PHP 8.2, 8.3

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-.idea
-vendor/
-coverage/
-composer.lock
+### Common places for toolings.
+/.cache/
+/reports/
+
+
+### Composer.
+/vendor/
+/mindscreen-yarnlock-*.tar
+/mindscreen-yarnlock-*.tar.bz2
+/mindscreen-yarnlock-*.tar.gz
+/mindscreen-yarnlock-*.tgz
+/mindscreen-yarnlock-*.zip
+
+
+### PHPCS.
+/phpcs.xml
+
+
+### PHPUnit.
+/phpunit.xml
