--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,42 @@
             "email": "matthias.klatte@mindscreen.de"
         }
     ],
-    "scripts": {
-        "test": "phpunit tests"
+    "config": {
+        "platform": {
+            "php": "7.2"
+        },
+        "optimize-autoloader": true,
+        "sort-packages": true
     },
-    "require": {},
+    "require": {
+        "php": ">=7.2",
+        "ext-ctype": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5",
+        "squizlabs/php_codesniffer": "^3.9"
+    },
     "autoload": {
         "psr-4": {
             "Mindscreen\\YarnLock\\": "src/"
         }
     },
-    "require-dev": {
-        "phpunit/phpunit": "^5"
+    "autoload-dev": {
+        "psr-4": {
+            "Mindscreen\\YarnLock\\Tests\\": "tests/src/"
+        }
+    },
+    "scripts": {
+        "lint": [
+            "@lint:composer-validate",
+            "@lint:phpcs"
+        ],
+        "lint:composer-validate": "\"${COMPOSER_BINARY}\" validate",
+        "lint:phpcs": "phpcs",
+        "test": [
+            "mkdir -p '.cache' 'reports/human' 'reports/machine'",
+            "@test:phpunit"
+        ],
+        "test:phpunit": "phpunit"
     }
 }
